--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_route.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_route.html.twig
@@ -27,7 +27,6 @@
 
             <div class="titles" style="font-size: 10px;">
                 <div class="left">Corporación Educativa Saint Michael S.A.</div>
-                <div class="right">Control de Buses Escuela.</div>
                 <div class="clear"></div>
 
                 <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
@@ -47,19 +46,19 @@
                 {% endif %}
             </div>
             <div class="fields_row student_title">
-                <div style="float: left; width: 50px;">{%trans%}label.carne{%endtrans%}</div>
-                <div style="float: left; width: 200px;">{%trans%}label.student.name{%endtrans%}</div>
-                <div style="float: left; width: 60px;">{%trans%}label.section{%endtrans%}</div>
+                <label class="field" style="display: inline-block; width: 75px;">{%trans%}label.carne{%endtrans%}</label>
+                <label class="field" style="display: inline-block; width: 400px;">{%trans%}label.student.name{%endtrans%}</label>
+                <label class="field" style="display: inline-block; width: 75px;">{%trans%}label.section{%endtrans%}</label>
                 <div class="clear"></div>
             </div>
                 {% set counter = 0 %}
                 {% for student in route.students %}
                     {%  if (student.dailyStatus == 1) %}
                         <div class="student_row">
-                            <div style="float: left; width: 50px;">{{ student.carne }}</div>
-                            <div style="float: left; width: 200px;">{{ student }}</div>
-                            <div style="float: left; width: 60px;">{{ student.groupyear }}</div>
-                            <div style="float: left; width: 300px;">{{ student.dailyDescription }}</div>
+                            <label class="field_value" style="display: inline-block; width: 75px;">{{ student.carne }}</label>
+                            <label class="field_value" style="display: inline-block; width: 400px;">{{ student }}</label>
+                            <label class="field_value" style="display: inline-block; width: 75px;">{{ student.groupyear }}</label>
+                            <label class="field_value" style="display: inline-block; width: 300px;">{{ student.dailyDescription }}</label>
                         </div>
                         <div class="clear"></div>
                         {% set counter = counter + 1 %}
