--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -76,7 +76,6 @@
                 {% for group in groups %}
                 <div class="titles" style="font-size: 10px;">
                     <div class="left">Corporación Educativa Saint Michael S.A.</div>
-                    <div class="right">Reporte de estudiantes.</div>
                     <div class="clear"></div>
 
                     <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
@@ -89,28 +88,28 @@
                     <p style="text-decoration: underline; padding-bottom: 0px;">Nivel: {{ group.grade ~ " - " ~ group }}</p>
                 </div>
                 <div class="fields_row student_title">
-                    <div style="float: left; width: 50px;">{%trans%}label.carne{%endtrans%}</div>
-                    <div style="float: left; width: 350px;">{%trans%}label.student.name{%endtrans%}</div>
+                    <label class="field_value" style="display: inline-block; width: 50px;">{%trans%}label.carne{%endtrans%}</label>
+                    <label class="field_value" style="display: inline-block; width: 350px;">{%trans%}label.student.name{%endtrans%}</label>
                     {% if age != null %}
-                    <div style="float: left; width: 100px;">{%trans%}label.age{%endtrans%}</div>
+                    <label class="field_value" style="display: inline-block; width: 100px;">{%trans%}label.age{%endtrans%}</label>
                     {% endif %}
                     {% if gender != null %}
-                    <div style="float: left; width: 150px;">{%trans%}label.gender{%endtrans%}</div>
+                    <label class="field_value" style="display: inline-block; width: 150px;">{%trans%}label.gender{%endtrans%}</label>
                     {% endif %}
-                    <div style="float: left; width: 60px;"></div>
+                    <label class="field_value" style="display: inline-block; width: 60px;"></label>
                     <div class="clear"></div>
                 </div>
                 {% for student in group.students %}
                     <div class="student_row">
-                        <div style="float: left; width: 50px;">{{ student.carne }}</div>
-                        <div style="float: left; width: 350px;">{{ student.lastname ~ ", " ~ student.firstname }}</div>
+                        <label class="field_value" style="display: inline-block; width: 50px;">{{ student.carne }}</label>
+                        <label class="field_value" style="display: inline-block; width: 350px;">{{ student.lastname ~ ", " ~ student.firstname }}</label>
                         {% if age != null %}
-                        <div style="float: left; width: 100px;">{{ student.age }}</div>
+                        <label class="field_value" style="display: inline-block; width: 100px;">{{ student.age }}</label>
                         {% endif %}
                         {% if gender != null %}
-                        <div style="float: left; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</div>
+                        <label class="field_value" style="display: inline-block; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</label>
                         {% endif %}
-                        <div style="float: left; width: 60px;">&nbsp;</div>
+                        <label class="field_value" style="display: inline-block; width: 60px;">&nbsp;</label>
                     </div>
                     <div class="clear"></div>
                 {% endfor %}
@@ -129,7 +128,6 @@
                     {% for grade in grades %}
                     <div class="titles" style="font-size: 10px;">
                         <div class="left">Corporación Educativa Saint Michael S.A.</div>
-                        <div class="right">Reporte de estudiantes.</div>
                         <div class="clear"></div>
 
                         <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
@@ -142,28 +140,28 @@
                         <p style="text-decoration: underline; padding-bottom: 0px;">Grade: {{ grade }}</p>
                     </div>
                     <div class="fields_row student_title">
-                        <div style="float: left; width: 50px;">{%trans%}label.carne{%endtrans%}</div>
-                        <div style="float: left; width: 350px;">{%trans%}label.student.name{%endtrans%}</div>
+                        <label class="field_value" style="display: inline-block; width: 50px;">{%trans%}label.carne{%endtrans%}</label>
+                        <label class="field_value" style="display: inline-block; width: 350px;">{%trans%}label.student.name{%endtrans%}</label>
                         {% if age != null %}
-                        <div style="float: left; width: 100px;">{%trans%}label.age{%endtrans%}</div>
+                        <label class="field_value" style="display: inline-block; width: 100px;">{%trans%}label.age{%endtrans%}</label>
                         {% endif %}
                         {% if gender != null %}
-                        <div style="float: left; width: 150px;">{%trans%}label.gender{%endtrans%}</div>
+                        <label class="field_value" style="display: inline-block; width: 150px;">{%trans%}label.gender{%endtrans%}</label>
                         {% endif %}
-                        <div style="float: left; width: 60px;"></div>
+                        <label class="field_value" style="display: inline-block; width: 60px;"></label>
                         <div class="clear"></div>
                     </div>
                     {% for student in grade.students %}
                     <div class="student_row">
-                        <div style="float: left; width: 50px;">{{ student.carne }}</div>
-                        <div style="float: left; width: 350px;">{{ student.lastname ~ ", " ~ student.firstname }}</div>
+                        <label class="field_value" style="display: inline-block; width: 50px;">{{ student.carne }}</label>
+                        <label class="field_value" style="display: inline-block; width: 350px;">{{ student.lastname ~ ", " ~ student.firstname }}</label>
                         {% if age != null %}
-                        <div style="float: left; width: 100px;">{{ student.age }}</div>
+                        <label class="field_value" style="display: inline-block; width: 100px;">{{ student.age }}</label>
                         {% endif %}
                         {% if gender != null %}
-                        <div style="float: left; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</div>
+                        <label class="field_value" style="display: inline-block; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</label>
                         {% endif %}
-                        <div style="float: left; width: 60px;">&nbsp;</div>
+                        <label class="field_value" style="display: inline-block; width: 60px;">&nbsp;</label>
                     </div>
                     <div class="clear"></div>
                     {% endfor %}
@@ -181,7 +179,6 @@
                     {% for institution in institutions %}
                     <div class="titles" style="font-size: 10px;">
                         <div class="left">Corporación Educativa Saint Michael S.A.</div>
-                        <div class="right">Reporte de estudiantes.</div>
                         <div class="clear"></div>
 
                         <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
@@ -194,28 +191,28 @@
                         <p style="text-decoration: underline; padding-bottom: 0px;">Instituci&oacute;n: {{ institution }}</p>
                     </div>
                     <div class="fields_row student_title">
-                        <div style="float: left; width: 50px;">{%trans%}label.carne{%endtrans%}</div>
-                        <div style="float: left; width: 350px;">{%trans%}label.student.name{%endtrans%}</div>
+                        <label class="field_value" style="display: inline-block; width: 50px;">{%trans%}label.carne{%endtrans%}</label>
+                        <label class="field_value" style="display: inline-block; width: 350px;">{%trans%}label.student.name{%endtrans%}</label>
                         {% if age != null %}
-                        <div style="float: left; width: 100px;">{%trans%}label.age{%endtrans%}</div>
+                        <label class="field_value" style="display: inline-block; width: 100px;">{%trans%}label.age{%endtrans%}</label>
                         {% endif %}
                         {% if gender != null %}
-                        <div style="float: left; width: 150px;">{%trans%}label.gender{%endtrans%}</div>
+                        <label class="field_value" style="display: inline-block; width: 150px;">{%trans%}label.gender{%endtrans%}</label>
                         {% endif %}
-                        <div style="float: left; width: 60px;"></div>
+                        <label class="field_value" style="display: inline-block; width: 60px;"></label>
                         <div class="clear"></div>
                     </div>
                     {% for student in institution.students %}
                     <div class="student_row">
-                        <div style="float: left; width: 50px;">{{ student.carne }}</div>
-                        <div style="float: left; width: 350px;">{{ student.lastname ~ ", " ~ student.firstname }}</div>
+                        <label class="field_value" style="display: inline-block; width: 50px;">{{ student.carne }}</div>
+                        <label class="field_value" style="display: inline-block; width: 350px;">{{ student.lastname ~ ", " ~ student.firstname }}</label>
                         {% if age != null %}
-                        <div style="float: left; width: 100px;">{{ student.age }}</div>
+                        <label class="field_value" style="display: inline-block; width: 100px;">{{ student.age }}</label>
                         {% endif %}
                         {% if gender != null %}
-                        <div style="float: left; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</div>
+                        <label class="field_value" style="display: inline-block; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</label>
                         {% endif %}
-                        <div style="float: left; width: 60px;">&nbsp;</div>
+                        <label class="field_value" style="display: inline-block; width: 60px;">&nbsp;</label>
                     </div>
                     <div class="clear"></div>
                     {% endfor %}
