--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Qualification/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Qualification/index.html.twig
@@ -45,23 +45,27 @@
     .tableQualifications td { width: 45px; text-align: center; font-size: 11px;}
     /*.tableQualifications .azul {background-color: #2b34ee; color: #000; line-height: 0px;}*/
     .tableQualifications .azul {background-color: #2b34ee; color: #000;}
-    .tableQualifications .celesteClaro {background-color: #A4D2FD; color: #000;}
-    .tableQualifications .celesteOscuro {background-color: #5F96E7; color: #000;}
-    .tableQualifications .morado {background-color: #B698EE; color: #000;}
+    .tableQualifications .celesteClaro {background-color: #A4D2FD; color: #000; font-size: 12px;}
+    .tableQualifications .celesteOscuro {background-color: #5F96E7; color: #000; font-weight: bold; font-size: 12px;}
+    .tableQualifications .morado {background-color: #B698EE; color: #000; font-size: 12px;}
     .tableQualifications .bold {font-weight: bold;}
 
-    .verticalText{text-align: center; vertical-align: middle; width: 20px; margin: 0px; padding: 0px; padding-left: 3px; padding-right: 3px; padding-top: 10px; white-space: nowrap; font-size: 11px; -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg);}
+    .verticalText{text-align: center; vertical-align: middle; font-weight: bold; width: 20px; margin: 0px; padding: 0px; padding-left: 3px; padding-right: 3px; padding-top: 10px; white-space: nowrap; font-size: 11px; -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg);}
 
     .itemEstudiante{ background-color: #A4D2FD; }
     .qualificationTable .itemNota{ background-color: #A4D2FD; }
     .qualificationTable .textField {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 44px; height: 24px; line-height: 11px;
-        vertical-align: middle; border: none; font-size: 10px; padding: 0px; margin: 0px;}
+        vertical-align: middle; border: none; font-size: 12px; padding: 0px; margin: 0px; background-color: #A4D2FD;}
 
     .qualificationTable {width: 950px}
     #contentBody {width: auto; overflow-x:scroll; margin-left:369px; }
     .headcolcarne { height: 30px; border: 1px solid black; position:absolute; left:0; line-height: 30px; }
     .headcolnombre { height: 30px; border: 1px solid black; position:absolute; left:75px; line-height: 30px; }
     .headcoltrim { height: 30px;  border: 1px solid black; position:absolute; left:325px; line-height: 30px; }
+</style>
+
+<style type="text/css">
+    input {font-weight:bold;}
 </style>
 {% endblock %}
 
